--- a/fr.pacman.front.start.ui/build.properties
+++ b/fr.pacman.front.start.ui/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               resources/lib/commonmark-0.24.0.jar
+               resources/lib/commonmark-0.24.0.jar,\
+               resources/templates/react-ts-template.zip
 
