Première version création projet spa fonctionnelle avec dsfr.

--- a/fr.pacman.front.start.ui/build.properties
+++ b/fr.pacman.front.start.ui/build.properties
@@ -4,6 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               resources/lib/commonmark-0.24.0.jar,\
-               resources/templates/react-ts-template.zip
+               resources/
 
