Ajout du projet front.cinematic avec le toolkit dsfr.

--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,7 @@
 				<module>fr.pacman.front.core</module>
 				<module>fr.pacman.front.cinematic.react</module>
 				<module>fr.pacman.front.start</module>
+				<module>fr.pacman.front.cinematic</module>
 				
 				<!-- modules couche UI. -->
 				<module>fr.pacman.front.core.ui</module>
@@ -231,6 +232,7 @@
 				<module>fr.pacman.front.core.ui.feature</module>
 				<module>fr.pacman.front.config.ui.feature</module>
 				<module>fr.pacman.front.cinematic.react.ui.feature</module>
+				<module>fr.pacman.front.cinematic.feature</module>
 				<module>fr.pacman.front.start.ui.feature</module>
 
 				<!-- Autres modules. -->
