--- a/fr.pacman.front.core/resources/nommage.properties
+++ b/fr.pacman.front.core/resources/nommage.properties
@@ -22,20 +22,8 @@ methodGet = get[CamelCase.UpperFirst/]
 methodSet = set[CamelCase.UpperFirst/]
 # Le nom d'une methode reset
 methodReset = reset[CamelCase.UpperFirst/]
-# La norme a appliquer pour une classe par defaut
-classDefault = [CamelCase/]
-# La norme a appliquer pour une annotation Java
-classAnnotation = [CamelCase/]
-# La norme a appliquer pour une classe abstraite
-classAbstract = [CamelCase/]Abs
-# La norme a appliquer pour une interface
-classInterface = [CamelCase/]
-# La norme a appliquer pour une classe d'implementation
-classImplem = [CamelCase/]Impl
-# La norme a appliquer pour une enumeration
-classEnum = [CamelCase/]Enum
-# La norme a appliquer pour une classe de test
-classTest = [CamelCase/]Test
+# La norme a appliquer pour une page par defaut
+pageDefault = [CamelCase/]
 # Le nom d'une variable final
 variableFinal = [CamelCase.LowerFirst/]
 # Le nom d'une variable par defaut
