--- a/fr.pacman.front.start.ui/resources/templates/.gitignore
+++ b/fr.pacman.front.start.ui/resources/templates/.gitignore
@@ -1,43 +1,24 @@
-# Node modules
-/node_modules/
-
-# Build output
-/dist/
-build/
-
-# Vite cache
-/.vite/
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# Environment variables
-.env
-.env.local
-.env.*.local
+node_modules
+dist
+dist-ssr
+*.local
 
-# TypeScript
-*.tsbuildinfo
-
-# IDE / Editor
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-
-# OS files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# Cypress screenshots & videos
-/cypress/screenshots/
-/cypress/videos/
-
-# Jest coverage
-/coverage/
-
-# Optional npm cache folder
-.npm/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
